--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -9,13 +9,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attaching package: ‘MASS’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:ISLR2’:\n",
+      "\n",
+      "    Boston\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(ISLR2)\n",
     "library(MASS)\n",
@@ -337,6 +353,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Confusion matrix and prediction accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "             Direction\n",
+       "logistic.pred Down  Up\n",
+       "         Down  145 141\n",
+       "         Up    457 507"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.5216"
+      ],
+      "text/latex": [
+       "0.5216"
+      ],
+      "text/markdown": [
+       "0.5216"
+      ],
+      "text/plain": [
+       "[1] 0.5216"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "table(logistic.pred,Direction)\n",
+    "mean(logistic.pred==Direction)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Cross Validation"
    ]
   },
@@ -349,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -371,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -391,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -415,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -481,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -539,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -592,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -646,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -746,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -846,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -888,8 +956,8 @@
       "text/plain": [
        "         Direction.2005\n",
        "knn.pred2 Down Up\n",
-       "     Down   48 56\n",
-       "     Up     63 85"
+       "     Down   48 55\n",
+       "     Up     63 86"
       ]
      },
      "metadata": {},
@@ -898,16 +966,16 @@
     {
      "data": {
       "text/html": [
-       "0.527777777777778"
+       "0.531746031746032"
       ],
       "text/latex": [
-       "0.527777777777778"
+       "0.531746031746032"
       ],
       "text/markdown": [
-       "0.527777777777778"
+       "0.531746031746032"
       ],
       "text/plain": [
-       "[1] 0.5277778"
+       "[1] 0.531746"
       ]
      },
      "metadata": {},
