--- a/lab/lab4.ipynb
+++ b/lab/lab4.ipynb
@@ -9,31 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The following objects are masked from Auto (pos = 3):\n",
-      "\n",
-      "    acceleration, cylinders, displacement, horsepower, mpg, name,\n",
-      "    origin, weight, year\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(ISLR2)\n",
     "library(boot)\n",
     "\n",
-    "attach(Auto)"
+    "attach(Auto)\n",
+    "# ??Auto"
    ]
   },
   {
@@ -260,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -275,14 +263,14 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>24.2315135179292</li><li>19.2482131244897</li><li>19.334984064029</li><li>19.4244303104302</li><li>19.0332138547041</li></ol>\n"
+       "<ol class=list-inline><li>24.2315135179292</li><li>19.2482131244897</li><li>19.334984064029</li><li>19.4244303104303</li><li>19.0332138547041</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
        "\\item 24.2315135179292\n",
        "\\item 19.2482131244897\n",
        "\\item 19.334984064029\n",
-       "\\item 19.4244303104302\n",
+       "\\item 19.4244303104303\n",
        "\\item 19.0332138547041\n",
        "\\end{enumerate*}\n"
       ],
@@ -290,7 +278,7 @@
        "1. 24.2315135179292\n",
        "2. 19.2482131244897\n",
        "3. 19.334984064029\n",
-       "4. 19.4244303104302\n",
+       "4. 19.4244303104303\n",
        "5. 19.0332138547041\n",
        "\n",
        "\n"
@@ -309,7 +297,7 @@
     "\n",
     "# for polynomials from order 1 to 5 calculate average MSE \n",
     "for (i in 1:5){ \n",
-    "    glm.fit = glm(mpg~poly(horsepower,i),data=Auto)\n",
+    "    glm.fit = glm(mpg~poly(horsepower,i),data=Auto) # k=length(mpg)\n",
     "    cv.error[i] = cv.glm(Auto,glm.fit)$delta[1]\n",
     "}\n",
     "\n",
@@ -366,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -421,11 +409,11 @@
     }
    ],
    "source": [
-    "set.seed(1) #test polynomials from order 1 to 10 (loop) \n",
+    "set.seed(1) #test polynomials from order 1 to 10 (loop) # seed for uniformity \n",
     "cv.error.10 = rep(0,10)\n",
     "for (i in 1:10) { \n",
     "    glm.fit = glm(mpg~poly(horsepower,i),data=Auto)\n",
-    "    cv.error.10[i] = cv.glm(Auto,glm.fit, K=10)$delta[1]\n",
+    "    cv.error.10[i] = cv.glm(Auto,glm.fit, K=10)$delta[1] # K=10\n",
     "}\n",
     "\n",
     "cv.error.10"
@@ -444,7 +432,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.3"
+   "version": "4.2.1"
   },
   "orig_nbformat": 4
  },
