--- a/asg/asg2_1.ipynb
+++ b/asg/asg2_1.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assignment 2 Question 1"
+    "### Assignment 2 Question 1\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- x1 = hours studied\n",
-    "- x2 = GPA\n",
-    "- y = receive an A"
+    "-   x1 = hours studied\n",
+    "-   x2 = GPA\n",
+    "-   y = receive an A\n"
    ]
   },
   {
@@ -26,9 +26,9 @@
    },
    "outputs": [],
    "source": [
-    "beta0 = -6\n",
-    "beta1 = 0.05\n",
-    "beta2 = 1"
+    "beta0 <- -6\n",
+    "beta1 <- 0.05\n",
+    "beta2 <- 1\n"
    ]
   },
   {
@@ -41,8 +41,8 @@
    },
    "outputs": [],
    "source": [
-    "x1 = 40\n",
-    "x2 = 3.5"
+    "x1 <- 40\n",
+    "x2 <- 3.5\n"
    ]
   },
   {
@@ -74,8 +74,8 @@
     }
    ],
    "source": [
-    "p1 = exp(beta0+beta1*x1+beta2*x2)/(1+exp(beta0+beta1*x1+beta2*x2))\n",
-    "p1"
+    "p1 <- exp(beta0 + beta1 * x1 + beta2 * x2) / (1 + exp(beta0 + beta1 * x1 + beta2 * x2))\n",
+    "p1\n"
    ]
   },
   {
@@ -107,8 +107,8 @@
     }
    ],
    "source": [
-    "rx1 = (log(0.5/(1-0.5))-beta0-beta2*x2)/beta1\n",
-    "rx1"
+    "rx1 <- (log(0.5 / (1 - 0.5)) - beta0 - beta2 * x2) / beta1\n",
+    "rx1\n"
    ]
   }
  ],
