--- a/asg/asg2_6.ipynb
+++ b/asg/asg2_6.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assignment 2 Question 4"
+    "### Assignment 2 Question 4\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Loading liberary and dataset"
+    "#### Loading liberary and dataset\n"
    ]
   },
   {
@@ -25,14 +25,14 @@
    "outputs": [],
    "source": [
     "library(boot)\n",
-    "library(ggplot2)"
+    "library(ggplot2)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (a) Generate a simulated data set"
+    "#### (a) Generate a simulated data set\n"
    ]
   },
   {
@@ -46,9 +46,9 @@
    "outputs": [],
    "source": [
     "set.seed(1)\n",
-    "y=rnorm(100)\n",
-    "x=rnorm(100)\n",
-    "y=x-2*x^2+rnorm(100)"
+    "y <- rnorm(100)\n",
+    "x <- rnorm(100)\n",
+    "y <- x - 2 * x^2 + rnorm(100)\n"
    ]
   },
   {
@@ -61,14 +61,14 @@
    },
    "outputs": [],
    "source": [
-    "dataset=data.frame(x,y)"
+    "dataset <- data.frame(x, y)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (b) Create a scatterplot of X against Y. Comment on what you find."
+    "#### (b) Create a scatterplot of X against Y. Comment on what you find.\n"
    ]
   },
   {
@@ -97,16 +97,16 @@
     }
    ],
    "source": [
-    "ggplot(dataset,aes(x=x,y=y))+ \n",
-    "    geom_point()+\n",
-    "    theme_linedraw()"
+    "ggplot(dataset, aes(x = x, y = y)) +\n",
+    "    geom_point() +\n",
+    "    theme_linedraw()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (c) Set a random seed, and then compute the LOOCV errors"
+    "#### (c) Set a random seed, and then compute the LOOCV errors\n"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "outputs": [],
    "source": [
     "set.seed(1)\n",
-    "cv.mse=data.frame()"
+    "cv.mse <- data.frame()\n"
    ]
   },
   {
@@ -134,10 +134,10 @@
    "outputs": [],
    "source": [
     "for (i in 1:4) {\n",
-    "    glm.fit=glm(y~poly(x,i))\n",
-    "    glm.mse=cv.glm(dataset,glm.fit)$delta\n",
-    "    cv.mse<-rbind(cv.mse,data.frame(avgMse=glm.mse[1],adjMse=glm.mse[2]))\n",
-    "}"
+    "    glm.fit <- glm(y ~ poly(x, i))\n",
+    "    glm.mse <- cv.glm(dataset, glm.fit)$delta\n",
+    "    cv.mse <- rbind(cv.mse, data.frame(avgMse = glm.mse[1], adjMse = glm.mse[2]))\n",
+    "}\n"
    ]
   },
   {
@@ -203,14 +203,14 @@
     }
    ],
    "source": [
-    "cv.mse"
+    "cv.mse\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (d) Repeat (c) using another random seed, and report your results. Are your results the same as what you got in (c)? Why?"
+    "#### (d) Repeat (c) using another random seed, and report your results. Are your results the same as what you got in (c)? Why?\n"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "outputs": [],
    "source": [
     "set.seed(2)\n",
-    "cv.mse=data.frame()"
+    "cv.mse <- data.frame()\n"
    ]
   },
   {
@@ -238,10 +238,10 @@
    "outputs": [],
    "source": [
     "for (i in 1:4) {\n",
-    "    glm.fit=glm(y~poly(x,i))\n",
-    "    glm.mse=cv.glm(dataset,glm.fit)$delta\n",
-    "    cv.mse<-rbind(cv.mse,data.frame(avgMse=glm.mse[1],adjMse=glm.mse[2]))\n",
-    "}"
+    "    glm.fit <- glm(y ~ poly(x, i))\n",
+    "    glm.mse <- cv.glm(dataset, glm.fit)$delta\n",
+    "    cv.mse <- rbind(cv.mse, data.frame(avgMse = glm.mse[1], adjMse = glm.mse[2]))\n",
+    "}\n"
    ]
   },
   {
@@ -307,14 +307,14 @@
     }
    ],
    "source": [
-    "cv.mse"
+    "cv.mse\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (e) Which of the models in (c) had the smallest LOOCV error? Is this what you expected? Explain your answer."
+    "#### (e) Which of the models in (c) had the smallest LOOCV error? Is this what you expected? Explain your answer.\n"
    ]
   },
   {
@@ -365,14 +365,14 @@
    ],
    "source": [
     "which.min(cv.mse$avgMse)\n",
-    "which.min(cv.mse$adjMse)"
+    "which.min(cv.mse$adjMse)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (f) Comment on the statistical significance of the coefficient estimates that results from fitting each of the models in (c) using least squares. Do these results agree with the conclusions drawn based on the cross-validation results?"
+    "#### (f) Comment on the statistical significance of the coefficient estimates that results from fitting each of the models in (c) using least squares. Do these results agree with the conclusions drawn based on the cross-validation results?\n"
    ]
   },
   {
@@ -419,7 +419,7 @@
     }
    ],
    "source": [
-    "summary(glm(y~poly(x,4)))"
+    "summary(glm(y ~ poly(x, 4)))\n"
    ]
   }
  ],
