--- a/lab/lab4.ipynb
+++ b/lab/lab4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loading liberary and dataset"
+    "### Loading liberary and dataset\n"
    ]
   },
   {
@@ -21,14 +21,14 @@
     "library(boot)\n",
     "\n",
     "attach(Auto)\n",
-    "# ??Auto"
+    "# ??Auto\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Validation Set Approach"
+    "### Validation Set Approach\n"
    ]
   },
   {
@@ -41,19 +41,19 @@
    },
    "outputs": [],
    "source": [
-    "set.seed(1) \n",
-    "l=length(mpg) \n",
+    "set.seed(1)\n",
+    "l <- length(mpg)\n",
     "# pick l/2 from l, without put back\n",
-    "train = sample(l, l/2, replace = FALSE) \n",
+    "train <- sample(l, l / 2, replace = FALSE)\n",
     "# rest is validation is validation set\n",
-    "mpg.test = mpg[-train] "
+    "mpg.test <- mpg[-train]\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### fit 3 models respectively using the training data "
+    "#### fit 3 models respectively using the training data\n"
    ]
   },
   {
@@ -66,16 +66,16 @@
    },
    "outputs": [],
    "source": [
-    "lm.fit1 = lm(mpg~horsepower,data=Auto,subset=train) \n",
-    "lm.fit2 = lm(mpg~poly(horsepower,2),data=Auto,subset=train) \n",
-    "lm.fit3 = lm(mpg~poly(horsepower,3),data=Auto,subset=train) "
+    "lm.fit1 <- lm(mpg ~ horsepower, data = Auto, subset = train)\n",
+    "lm.fit2 <- lm(mpg ~ poly(horsepower, 2), data = Auto, subset = train)\n",
+    "lm.fit3 <- lm(mpg ~ poly(horsepower, 3), data = Auto, subset = train)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### make predictions for each model "
+    "#### make predictions for each model\n"
    ]
   },
   {
@@ -88,16 +88,16 @@
    },
    "outputs": [],
    "source": [
-    "lm.pred1 = predict(lm.fit1,Auto[-train,]) \n",
-    "lm.pred2 = predict(lm.fit2,Auto[-train,]) \n",
-    "lm.pred3 = predict(lm.fit3,Auto[-train,]) "
+    "lm.pred1 <- predict(lm.fit1, Auto[-train, ])\n",
+    "lm.pred2 <- predict(lm.fit2, Auto[-train, ])\n",
+    "lm.pred3 <- predict(lm.fit3, Auto[-train, ])\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### calculate MSE for each model "
+    "#### calculate MSE for each model\n"
    ]
   },
   {
@@ -110,9 +110,9 @@
    },
    "outputs": [],
    "source": [
-    "linear_MSE = mean((mpg.test-lm.pred1)^2) #linear \n",
-    "qua_MSE = mean((mpg.test-lm.pred2)^2) #quadratic \n",
-    "cub_MSE = mean((mpg.test-lm.pred3)^2) #cubic"
+    "linear_MSE <- mean((mpg.test - lm.pred1)^2) # linear\n",
+    "qua_MSE <- mean((mpg.test - lm.pred2)^2) # quadratic\n",
+    "cub_MSE <- mean((mpg.test - lm.pred3)^2) # cubic\n"
    ]
   },
   {
@@ -182,14 +182,14 @@
    "source": [
     "linear_MSE\n",
     "qua_MSE\n",
-    "cub_MSE"
+    "cub_MSE\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LOOCV"
+    "### LOOCV\n"
    ]
   },
   {
@@ -232,18 +232,18 @@
     }
    ],
    "source": [
-    "glm.fit = glm(mpg~horsepower,data=Auto) \n",
-    "cv.err = cv.glm(Auto,glm.fit) \n",
-    "cv.err$delta #average MSE and adjusted MSE"
+    "glm.fit <- glm(mpg ~ horsepower, data = Auto)\n",
+    "cv.err <- cv.glm(Auto, glm.fit)\n",
+    "cv.err$delta # average MSE and adjusted MSE\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Adjusted mean squares are calculated by dividing the adjusted sum of squares by the degrees of freedom. \n",
+    "Adjusted mean squares are calculated by dividing the adjusted sum of squares by the degrees of freedom.\n",
     "\n",
-    "The adjusted sum of squares does not depend on the order the factors are entered into the model. \n"
+    "The adjusted sum of squares does not depend on the order the factors are entered into the model.\n"
    ]
   },
   {
@@ -293,15 +293,15 @@
    ],
    "source": [
     "# Write loop statement to repeat LOOCV process for all models\n",
-    "cv.error = rep(0,5) #initial value\n",
+    "cv.error <- rep(0, 5) # initial value\n",
     "\n",
-    "# for polynomials from order 1 to 5 calculate average MSE \n",
-    "for (i in 1:5){ \n",
-    "    glm.fit = glm(mpg~poly(horsepower,i),data=Auto) # k=length(mpg)\n",
-    "    cv.error[i] = cv.glm(Auto,glm.fit)$delta[1]\n",
+    "# for polynomials from order 1 to 5 calculate average MSE\n",
+    "for (i in 1:5) {\n",
+    "    glm.fit <- glm(mpg ~ poly(horsepower, i), data = Auto) # k=length(mpg)\n",
+    "    cv.error[i] <- cv.glm(Auto, glm.fit)$delta[1]\n",
     "}\n",
     "\n",
-    "cv.error"
+    "cv.error\n"
    ]
   },
   {
@@ -328,28 +328,28 @@
    "source": [
     "# this code also could be done manually, instead of using cv.glm()\n",
     "\n",
-    "model_predict = array(0, dim = c(nrow(Auto),5))\n",
+    "model_predict <- array(0, dim = c(nrow(Auto), 5))\n",
     "\n",
     "for (i in 1:5) {\n",
     "    for (index in 1:nrow(Auto)) {\n",
-    "        train = c(1:nrow(Auto))[-index]\n",
-    "        mpg.test = mpg[index] # rest is validation is validation set\n",
-    "        lm.fit = lm(mpg~poly(horsepower,i),data=Auto,subset=train) \n",
-    "        lm.pred = predict(lm.fit,Auto[-train,]) \n",
-    "        model_predict[index,i] =  lm.pred\n",
+    "        train <- c(1:nrow(Auto))[-index]\n",
+    "        mpg.test <- mpg[index] # rest is validation is validation set\n",
+    "        lm.fit <- lm(mpg ~ poly(horsepower, i), data = Auto, subset = train)\n",
+    "        lm.pred <- predict(lm.fit, Auto[-train, ])\n",
+    "        model_predict[index, i] <- lm.pred\n",
     "    }\n",
     "}\n",
     "\n",
     "for (i in 1:5) {\n",
-    "    print(mean((model_predict[,i]-mpg)^2))\n",
-    "}"
+    "    print(mean((model_predict[, i] - mpg)^2))\n",
+    "}\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### K-fold CV"
+    "### K-fold CV\n"
    ]
   },
   {
@@ -409,14 +409,14 @@
     }
    ],
    "source": [
-    "set.seed(1) #test polynomials from order 1 to 10 (loop) # seed for uniformity \n",
-    "cv.error.10 = rep(0,10)\n",
-    "for (i in 1:10) { \n",
-    "    glm.fit = glm(mpg~poly(horsepower,i),data=Auto)\n",
-    "    cv.error.10[i] = cv.glm(Auto,glm.fit, K=10)$delta[1] # K=10\n",
+    "set.seed(1) # test polynomials from order 1 to 10 (loop) # seed for uniformity\n",
+    "cv.error.10 <- rep(0, 10)\n",
+    "for (i in 1:10) {\n",
+    "    glm.fit <- glm(mpg ~ poly(horsepower, i), data = Auto)\n",
+    "    cv.error.10[i] <- cv.glm(Auto, glm.fit, K = 10)$delta[1] # K=10\n",
     "}\n",
     "\n",
-    "cv.error.10"
+    "cv.error.10\n"
    ]
   }
  ],
