--- a/lab/lab5.ipynb
+++ b/lab/lab5.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loading liberary and dataset"
+    "### Loading liberary and dataset\n"
    ]
   },
   {
@@ -17,18 +17,18 @@
    },
    "outputs": [],
    "source": [
-    "library(ISLR2) \n",
+    "library(ISLR2)\n",
     "library(boot)\n",
     "library(leaps)\n",
     "\n",
-    "attach(Portfolio) "
+    "attach(Portfolio)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Alpha function"
+    "### Alpha function\n"
    ]
   },
   {
@@ -41,19 +41,19 @@
    },
    "outputs": [],
    "source": [
-    "# Create a function to calculate alpha \n",
-    "alpha.fn = function(data,index){ \n",
-    "    X=data$X[index] \n",
-    "    Y=data$Y[index]\n",
-    "    return(var(Y)-cov(X,Y))/(var(X)+var(Y)-2*cov(X,Y))\n",
-    "} "
+    "# Create a function to calculate alpha\n",
+    "alpha.fn <- function(data, index) {\n",
+    "    X <- data$X[index]\n",
+    "    Y <- data$Y[index]\n",
+    "    return(var(Y) - cov(X, Y)) / (var(X) + var(Y) - 2 * cov(X, Y))\n",
+    "}\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bootstrap"
+    "### Bootstrap\n"
    ]
   },
   {
@@ -122,20 +122,20 @@
     }
    ],
    "source": [
-    "# Estimate alpha using all 100 observations \n",
-    "alpha.fn(Portfolio,1:100) \n",
-    "# Randomly select 100 observations from the dataset with replacement \n",
+    "# Estimate alpha using all 100 observations\n",
+    "alpha.fn(Portfolio, 1:100)\n",
+    "# Randomly select 100 observations from the dataset with replacement\n",
     "\n",
-    "set.seed(1) \n",
-    "alpha.fn(Portfolio,sample(100,100,replace=T))\n",
-    "# Estimates based on 1000 bootstrap samples \n",
+    "set.seed(1)\n",
+    "alpha.fn(Portfolio, sample(100, 100, replace = T))\n",
+    "# Estimates based on 1000 bootstrap samples\n",
     "\n",
-    "boot(Portfolio,alpha.fn,R=1000) # boot lib"
+    "boot(Portfolio, alpha.fn, R = 1000) # boot lib\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -153,34 +153,34 @@
    ],
    "source": [
     "set.seed(1)\n",
-    "a = sample(-5:5, 10, replace = T) \n",
+    "a <- sample(-5:5, 10, replace = T)\n",
     "# The ground truth should be 0, as sample() has uniform distribution.\n",
-    "print(paste0(\"Observation result: \",mean(a)))\n",
+    "print(paste0(\"Observation result: \", mean(a)))\n",
     "\n",
     "# mean(a)\n",
-    "times = 100\n",
-    "bootstrat_result = rep(NA, times)\n",
+    "times <- 100\n",
+    "bootstrat_result <- rep(NA, times)\n",
     "\n",
     "for (i in 1:times) {\n",
-    "    ith_resample = sample(a,10,replace = T)\n",
-    "    bootstrat_result[i] = mean(ith_resample)\n",
+    "    ith_resample <- sample(a, 10, replace = T)\n",
+    "    bootstrat_result[i] <- mean(ith_resample)\n",
     "}\n",
     "\n",
-    "print(paste0(\"Bootstrap result: \",mean(bootstrat_result)))"
+    "print(paste0(\"Bootstrap result: \", mean(bootstrat_result)))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Stepwise Selection"
+    "### Stepwise Selection\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Check missing values"
+    "#### Check missing values\n"
    ]
   },
   {
@@ -309,16 +309,16 @@
     }
    ],
    "source": [
-    "names(Hitters) \n",
-    "dim(Hitters) \n",
-    "sum(is.na(Hitters$Salary)) # Total number of missing salary (\"NA\") "
+    "names(Hitters)\n",
+    "dim(Hitters)\n",
+    "sum(is.na(Hitters$Salary)) # Total number of missing salary (\"NA\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Delete rows that have missing values"
+    "#### Delete rows that have missing values\n"
    ]
   },
   {
@@ -379,9 +379,9 @@
     }
    ],
    "source": [
-    "Hitters=na.omit(Hitters) # Remove rows with missing values in any variable\n",
-    "dim(Hitters) \n",
-    "sum(is.na(Hitters))"
+    "Hitters <- na.omit(Hitters) # Remove rows with missing values in any variable\n",
+    "dim(Hitters)\n",
+    "sum(is.na(Hitters))\n"
    ]
   },
   {
@@ -446,10 +446,10 @@
     }
    ],
    "source": [
-    "regfit.full = regsubsets(Salary~.,Hitters)\n",
-    "# Print the best set of predictors for each model size; \n",
+    "regfit.full <- regsubsets(Salary ~ ., Hitters)\n",
+    "# Print the best set of predictors for each model size;\n",
     "# By default, only return results up to the best 8-predictor model\n",
-    "summary(regfit.full)"
+    "summary(regfit.full)\n"
    ]
   },
   {
@@ -505,17 +505,17 @@
    ],
    "source": [
     "# To return as many predictors as specified(Max=19)\n",
-    "regfit.full = regsubsets(Salary~.,data=Hitters,nvmax=19)\n",
-    "reg.summary = summary(regfit.full)\n",
+    "regfit.full <- regsubsets(Salary ~ ., data = Hitters, nvmax = 19)\n",
+    "reg.summary <- summary(regfit.full)\n",
     "names(reg.summary)\n",
-    "# summary(regfit.full)"
+    "# summary(regfit.full)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plotting"
+    "#### Plotting\n"
    ]
   },
   {
@@ -545,28 +545,28 @@
    ],
    "source": [
     "# Create figure contains four subfigure(2*2)\n",
-    "par(mfrow=c(2,2))\n",
+    "par(mfrow = c(2, 2))\n",
     "# Figure 1 rss\n",
-    "plot(reg.summary$rss,xlab=\"Number of predictors\",ylab=\"RSS\",type=\"l\")\n",
-    "p=which.min(reg.summary$rss) \n",
-    "points(p,reg.summary$rss[p], col=\"red\",cex=2,pch=20)\n",
+    "plot(reg.summary$rss, xlab = \"Number of predictors\", ylab = \"RSS\", type = \"l\")\n",
+    "p <- which.min(reg.summary$rss)\n",
+    "points(p, reg.summary$rss[p], col = \"red\", cex = 2, pch = 20)\n",
     "\n",
     "# Figure 2 adjr2\n",
-    "plot(reg.summary$adjr2,xlab=\"Number of predictors\",ylab=\"Adjusted RSq\",type=\"l\")\n",
-    "a=which.max(reg.summary$adjr2) \n",
-    "# Highlight maximizer \n",
-    "points(a,reg.summary$adjr2[a], col=\"red\",cex=2,pch=20)\n",
+    "plot(reg.summary$adjr2, xlab = \"Number of predictors\", ylab = \"Adjusted RSq\", type = \"l\")\n",
+    "a <- which.max(reg.summary$adjr2)\n",
+    "# Highlight maximizer\n",
+    "points(a, reg.summary$adjr2[a], col = \"red\", cex = 2, pch = 20)\n",
     "\n",
     "# Figure 3 cp\n",
-    "plot(reg.summary$cp,xlab=\"Number of predictors\",ylab=\"Cp\",type='l')\n",
-    "b=which.min(reg.summary$cp)\n",
-    "points(b,reg.summary$cp[b],col=\"red\",cex=2,pch=20)\n",
+    "plot(reg.summary$cp, xlab = \"Number of predictors\", ylab = \"Cp\", type = \"l\")\n",
+    "b <- which.min(reg.summary$cp)\n",
+    "points(b, reg.summary$cp[b], col = \"red\", cex = 2, pch = 20)\n",
     "\n",
     "# Figure 4 bic\n",
-    "plot(reg.summary$bic,xlab=\"Number of predictors\",ylab=\"BIC\",type='l')\n",
-    "c=which.min(reg.summary$bic)\n",
-    "points(c,reg.summary$bic[c],col=\"red\",cex=2,pch=20)\n",
-    "# Print the coefficient estimates of the best model by BIC coef(regfit.full,c)"
+    "plot(reg.summary$bic, xlab = \"Number of predictors\", ylab = \"BIC\", type = \"l\")\n",
+    "c <- which.min(reg.summary$bic)\n",
+    "points(c, reg.summary$bic[c], col = \"red\", cex = 2, pch = 20)\n",
+    "# Print the coefficient estimates of the best model by BIC coef(regfit.full,c)\n"
    ]
   },
   {
@@ -622,14 +622,14 @@
     }
    ],
    "source": [
-    "coef(regfit.full,c)"
+    "coef(regfit.full, c)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Stepwise Selection - backward"
+    "### Stepwise Selection - backward\n"
    ]
   },
   {
@@ -669,25 +669,25 @@
     }
    ],
    "source": [
-    "regfit.fwd=regsubsets(Salary~.,data=Hitters,nvmax=19,method=\"forward\")\n",
-    "# summary(regfit.fwd) \n",
-    "print(summary(regfit.fwd)$bic) # (or cp, adjr2) \n",
+    "regfit.fwd <- regsubsets(Salary ~ ., data = Hitters, nvmax = 19, method = \"forward\")\n",
+    "# summary(regfit.fwd)\n",
+    "print(summary(regfit.fwd)$bic) # (or cp, adjr2)\n",
     "\n",
-    "regfit.bwd=regsubsets(Salary~.,data=Hitters,nvmax=19,method=\"backward\")\n",
-    "# summary(regfit.bwd) \n",
+    "regfit.bwd <- regsubsets(Salary ~ ., data = Hitters, nvmax = 19, method = \"backward\")\n",
+    "# summary(regfit.bwd)\n",
     "print(summary(regfit.bwd)$bic)\n",
     "\n",
-    "# Print the coefficient estimates of the 7-predictor model \n",
-    "print(coef(regfit.full,7))\n",
-    "print(coef(regfit.fwd,7))\n",
-    "print(coef(regfit.bwd,7))"
+    "# Print the coefficient estimates of the 7-predictor model\n",
+    "print(coef(regfit.full, 7))\n",
+    "print(coef(regfit.fwd, 7))\n",
+    "print(coef(regfit.bwd, 7))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CV for model selection"
+    "### CV for model selection\n"
    ]
   },
   {
@@ -767,30 +767,30 @@
    ],
    "source": [
     "# Randomly split data into a training set and a test\n",
-    "set.seed(1) \n",
-    "train=sample(c(TRUE,FALSE), nrow(Hitters), rep=TRUE) \n",
-    "test=(!train) \n",
-    "# Perform best subset selection \n",
-    "regfit.best=regsubsets(Salary~.,data=Hitters[train,],nvmax=19) \n",
-    "# Building an \"X\" matrix from test data \n",
-    "test.mat=model.matrix(Salary~.,data=Hitters[test,])\n",
+    "set.seed(1)\n",
+    "train <- sample(c(TRUE, FALSE), nrow(Hitters), rep = TRUE)\n",
+    "test <- (!train)\n",
+    "# Perform best subset selection\n",
+    "regfit.best <- regsubsets(Salary ~ ., data = Hitters[train, ], nvmax = 19)\n",
+    "# Building an \"X\" matrix from test data\n",
+    "test.mat <- model.matrix(Salary ~ ., data = Hitters[test, ])\n",
     "\n",
     "# Compute test MSE of the 19 models(size from 1 to 19)\n",
-    "val.errors=rep(NA,19) \n",
-    "for(i in 1:19){ \n",
-    "    coefi=coef(regfit.best,id=i) \n",
-    "    pred=test.mat[,names(coefi)]%*%coefi \n",
-    "    # Matrix product \n",
-    "    val.errors[i]=mean((Hitters$Salary[test]-pred)^2) # MSE\n",
-    "} \n",
-    "val.errors"
+    "val.errors <- rep(NA, 19)\n",
+    "for (i in 1:19) {\n",
+    "    coefi <- coef(regfit.best, id = i)\n",
+    "    pred <- test.mat[, names(coefi)] %*% coefi\n",
+    "    # Matrix product\n",
+    "    val.errors[i] <- mean((Hitters$Salary[test] - pred)^2) # MSE\n",
+    "}\n",
+    "val.errors\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Find best model from CV"
+    "### Find best model from CV\n"
    ]
   },
   {
@@ -893,13 +893,13 @@
    ],
    "source": [
     "# Find the best model (min)\n",
-    "best_size=which.min(val.errors) \n",
-    "coef(regfit.best,best_size)\n",
+    "best_size <- which.min(val.errors)\n",
+    "coef(regfit.best, best_size)\n",
     "\n",
-    "# After finding the best model, \n",
+    "# After finding the best model,\n",
     "# We need to fit this model using the full data set to obtain more accurate coefficient estimates\n",
-    "regfit.best=regsubsets(Salary~.,data=Hitters,nvmax=19)\n",
-    "coef(regfit.best,best_size)"
+    "regfit.best <- regsubsets(Salary ~ ., data = Hitters, nvmax = 19)\n",
+    "coef(regfit.best, best_size)\n"
    ]
   }
  ],
