--- a/asg/asg1_4.ipynb
+++ b/asg/asg1_4.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assignment 1 Question 4"
+    "### Assignment 1 Question 4\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (a) Fit a multiple regression model to predict Sales using Price, Urban, and US."
+    "#### (a) Fit a multiple regression model to predict Sales using Price, Urban, and US.\n"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "source": [
     "library(ISLR2)\n",
     "library(ggplot2)\n",
-    "attach(Carseats)"
+    "attach(Carseats)\n"
    ]
   },
   {
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "summary(Carseats)"
+    "summary(Carseats)\n"
    ]
   },
   {
@@ -124,15 +124,15 @@
     }
    ],
    "source": [
-    "lm.fit = lm(Sales ~ Price + Urban + US)\n",
-    "summary(lm.fit)"
+    "lm.fit <- lm(Sales ~ Price + Urban + US)\n",
+    "summary(lm.fit)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (e) On the basis of your response to the previous question, fit a smaller model that only uses the predictors for which there is evidence of association with the outcome."
+    "#### (e) On the basis of your response to the previous question, fit a smaller model that only uses the predictors for which there is evidence of association with the outcome.\n"
    ]
   },
   {
@@ -173,15 +173,15 @@
     }
    ],
    "source": [
-    "lm.fit2 = lm(Sales ~ Price + US)\n",
-    "summary(lm.fit2)"
+    "lm.fit2 <- lm(Sales ~ Price + US)\n",
+    "summary(lm.fit2)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (g) Using the model from (e), obtain 95% confidence intervals for the coefficient(s)."
+    "#### (g) Using the model from (e), obtain 95% confidence intervals for the coefficient(s).\n"
    ]
   },
   {
@@ -241,14 +241,14 @@
     }
    ],
    "source": [
-    "confint(lm.fit2, level = 0.95)"
+    "confint(lm.fit2, level = 0.95)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (h) Is there evidence of outliers or high leverage observations in the model from (e)?"
+    "#### (h) Is there evidence of outliers or high leverage observations in the model from (e)?\n"
    ]
   },
   {
@@ -277,9 +277,9 @@
     }
    ],
    "source": [
-    "ggplot(lm.fit2, aes(.fitted, .stdresid)) + \n",
+    "ggplot(lm.fit2, aes(.fitted, .stdresid)) +\n",
     "    geom_point() +\n",
-    "    theme_linedraw()"
+    "    theme_linedraw()\n"
    ]
   },
   {
@@ -311,7 +311,7 @@
     }
    ],
    "source": [
-    "mean(hatvalues(lm.fit2))"
+    "mean(hatvalues(lm.fit2))\n"
    ]
   },
   {
@@ -344,7 +344,7 @@
     "    scale_colour_continuous(guide = \"none\") +\n",
     "    geom_point(aes(size = .cooksd)) +\n",
     "    geom_line(aes(x = mean(.hat)), size = 1, colour = \"red\") +\n",
-    "    theme_linedraw()"
+    "    theme_linedraw()\n"
    ]
   }
  ],
