--- a/asg/asg2_3.ipynb
+++ b/asg/asg2_3.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assignment 2 Question 3"
+    "### Assignment 2 Question 3\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Loading liberary and dataset"
+    "#### Loading liberary and dataset\n"
    ]
   },
   {
@@ -49,7 +49,7 @@
     "library(ggplot2)\n",
     "library(ISLR2)\n",
     "library(MASS)\n",
-    "library(reshape2)"
+    "library(reshape2)\n"
    ]
   },
   {
@@ -62,14 +62,14 @@
    },
    "outputs": [],
    "source": [
-    "attach(Weekly)"
+    "attach(Weekly)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (a) Produce some numerical and graphical summaries of the Weekly data. Do there appear to be any patterns?"
+    "#### (a) Produce some numerical and graphical summaries of the Weekly data. Do there appear to be any patterns?\n"
    ]
   },
   {
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "summary(Weekly)"
+    "summary(Weekly)\n"
    ]
   },
   {
@@ -141,22 +141,24 @@
     }
    ],
    "source": [
-    "meltCor=melt(round(cor(Weekly[,-9]),10))\n",
-    "ggplot(data=meltCor,aes(x=Var1,y=Var2,fill=value))+\n",
-    "    geom_tile(color=\"black\")+\n",
-    "    scale_fill_gradient(low=\"white\",high=\"red\")+\n",
-    "    coord_fixed()+\n",
-    "    theme_grey(base_size=14)+\n",
-    "    theme(legend.position=\"none\",\n",
-    "        axis.ticks=element_blank(),\n",
-    "        axis.text.x=element_text(angle=330,hjust=0))"
+    "meltCor <- melt(round(cor(Weekly[, -9]), 10))\n",
+    "ggplot(data = meltCor, aes(x = Var1, y = Var2, fill = value)) +\n",
+    "    geom_tile(color = \"black\") +\n",
+    "    scale_fill_gradient(low = \"white\", high = \"red\") +\n",
+    "    coord_fixed() +\n",
+    "    theme_grey(base_size = 14) +\n",
+    "    theme(\n",
+    "        legend.position = \"none\",\n",
+    "        axis.ticks = element_blank(),\n",
+    "        axis.text.x = element_text(angle = 330, hjust = 0)\n",
+    "    )\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (b) Use the full data set to perform a logistic regression with Direction as the response and the five lag variables plus Volume as predictors. Use the summary function to print the results. Do any of the predictors appear to be statistically significant? If so, which ones?"
+    "#### (b) Use the full data set to perform a logistic regression with Direction as the response and the five lag variables plus Volume as predictors. Use the summary function to print the results. Do any of the predictors appear to be statistically significant? If so, which ones?\n"
    ]
   },
   {
@@ -206,15 +208,15 @@
     }
    ],
    "source": [
-    "log.fit=glm(Direction~Lag1+Lag2+Lag3+Lag4+Lag5+Volume,data=Weekly,family=binomial)\n",
-    "summary(log.fit)"
+    "log.fit <- glm(Direction ~ Lag1 + Lag2 + Lag3 + Lag4 + Lag5 + Volume, data = Weekly, family = binomial)\n",
+    "summary(log.fit)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (c) Compute the confusion matrix and overall fraction of correct predictions. Explain what the confusion matrix is telling you about the types of mistakes made by logistic regression."
+    "#### (c) Compute the confusion matrix and overall fraction of correct predictions. Explain what the confusion matrix is telling you about the types of mistakes made by logistic regression.\n"
    ]
   },
   {
@@ -263,18 +265,18 @@
     }
    ],
    "source": [
-    "log.resp=predict(log.fit,type=\"response\")\n",
-    "log.pred=rep(\"Down\",length(log.resp))\n",
-    "log.pred[log.resp>0.5]=\"Up\"\n",
+    "log.resp <- predict(log.fit, type = \"response\")\n",
+    "log.pred <- rep(\"Down\", length(log.resp))\n",
+    "log.pred[log.resp > 0.5] <- \"Up\"\n",
     "\n",
-    "confusionMatrix(factor(log.pred),factor(Direction))"
+    "confusionMatrix(factor(log.pred), factor(Direction))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (d) Now fit the logistic regression model using a training data period from 1990 to 2008, with Lag2 as the only predictor. Compute the confusion matrix and the overall fraction of correct predictions for the held out data (that is, the data from 2009 and 2010)."
+    "#### (d) Now fit the logistic regression model using a training data period from 1990 to 2008, with Lag2 as the only predictor. Compute the confusion matrix and the overall fraction of correct predictions for the held out data (that is, the data from 2009 and 2010).\n"
    ]
   },
   {
@@ -287,10 +289,10 @@
    },
    "outputs": [],
    "source": [
-    "train=(Year<2009)\n",
-    "test=Weekly[!train,]\n",
+    "train <- (Year < 2009)\n",
+    "test <- Weekly[!train, ]\n",
     "\n",
-    "test.direction=Direction[!train]"
+    "test.direction <- Direction[!train]\n"
    ]
   },
   {
@@ -339,19 +341,19 @@
     }
    ],
    "source": [
-    "slog.glm=glm(Direction~Lag2,data=Weekly,family=binomial,subset=train)\n",
-    "slog.resp=predict(slog.glm,test,type=\"response\")\n",
-    "slog.pred=rep(\"Down\",length(slog.resp))\n",
-    "slog.pred[slog.resp>0.5]=\"Up\"\n",
+    "slog.glm <- glm(Direction ~ Lag2, data = Weekly, family = binomial, subset = train)\n",
+    "slog.resp <- predict(slog.glm, test, type = \"response\")\n",
+    "slog.pred <- rep(\"Down\", length(slog.resp))\n",
+    "slog.pred[slog.resp > 0.5] <- \"Up\"\n",
     "\n",
-    "confusionMatrix(factor(slog.pred),factor(test.direction))"
+    "confusionMatrix(factor(slog.pred), factor(test.direction))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (e) Repeat (d) using LDA."
+    "#### (e) Repeat (d) using LDA.\n"
    ]
   },
   {
@@ -400,17 +402,17 @@
     }
    ],
    "source": [
-    "lda.lda=lda(Direction~Lag2,data=Weekly,subset=train)\n",
-    "lda.pred=predict(lda.lda,test)\n",
+    "lda.lda <- lda(Direction ~ Lag2, data = Weekly, subset = train)\n",
+    "lda.pred <- predict(lda.lda, test)\n",
     "\n",
-    "confusionMatrix(factor(lda.pred$class),factor(test.direction))"
+    "confusionMatrix(factor(lda.pred$class), factor(test.direction))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (f) Repeat (d) using QDA."
+    "#### (f) Repeat (d) using QDA.\n"
    ]
   },
   {
@@ -467,17 +469,17 @@
     }
    ],
    "source": [
-    "qda.qda=qda(Direction~Lag2,data=Weekly,subset=train)\n",
-    "qda.pred=predict(qda.qda,test)\n",
+    "qda.qda <- qda(Direction ~ Lag2, data = Weekly, subset = train)\n",
+    "qda.pred <- predict(qda.qda, test)\n",
     "\n",
-    "confusionMatrix(factor(qda.pred$class),factor(test.direction))"
+    "confusionMatrix(factor(qda.pred$class), factor(test.direction))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (g) Repeat (d) using KNN with K = 1."
+    "#### (g) Repeat (d) using KNN with K = 1.\n"
    ]
   },
   {
@@ -490,10 +492,10 @@
    },
    "outputs": [],
    "source": [
-    "train.mat=as.matrix(Lag2[train])\n",
-    "test.mat=as.matrix(Lag2[!train])\n",
+    "train.mat <- as.matrix(Lag2[train])\n",
+    "test.mat <- as.matrix(Lag2[!train])\n",
     "\n",
-    "train.direction=Direction[train]"
+    "train.direction <- Direction[train]\n"
    ]
   },
   {
@@ -542,8 +544,8 @@
     }
    ],
    "source": [
-    "knn.pred=knn(train.mat,test.mat,train.direction,k=1)\n",
-    "confusionMatrix(factor(knn.pred),factor(test.direction))"
+    "knn.pred <- knn(train.mat, test.mat, train.direction, k = 1)\n",
+    "confusionMatrix(factor(knn.pred), factor(test.direction))\n"
    ]
   }
  ],
