--- a/lab/lab3.ipynb
+++ b/lab/lab3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loading liberary and dataset"
+    "### Loading liberary and dataset\n"
    ]
   },
   {
@@ -35,14 +35,14 @@
    "source": [
     "library(ISLR2)\n",
     "library(MASS)\n",
-    "library(class) "
+    "library(class)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dataset info"
+    "### Dataset info\n"
    ]
   },
   {
@@ -133,14 +133,14 @@
     "dim(Smarket)\n",
     "\n",
     "# Attach the dataset\n",
-    "attach(Smarket)"
+    "attach(Smarket)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Log linear regression"
+    "### Log linear regression\n"
    ]
   },
   {
@@ -188,15 +188,15 @@
     }
    ],
    "source": [
-    "logistic.fit=glm(Direction~Lag1+Lag2+Lag3+Lag4+Lag5+Volume, data=Smarket, family=binomial)\n",
-    "summary(logistic.fit)"
+    "logistic.fit <- glm(Direction ~ Lag1 + Lag2 + Lag3 + Lag4 + Lag5 + Volume, data = Smarket, family = binomial)\n",
+    "summary(logistic.fit)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Predictions base on glm"
+    "### Predictions base on glm\n"
    ]
   },
   {
@@ -258,15 +258,16 @@
     }
    ],
    "source": [
-    "logistic.probs=predict(logistic.fit, type=\"response\")\n",
-    "logistic.probs[1:10]"
+    "logistic.probs <- predict(logistic.fit, type = \"response\")\n",
+    "logistic.probs[1:10]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### check dummy variable"
+    "#### check dummy variable\n"
    ]
   },
   {
@@ -322,14 +323,15 @@
     }
    ],
    "source": [
-    "contrasts(Direction)"
+    "contrasts(Direction)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Convert the prob to class"
+    "### Convert the prob to class\n"
    ]
   },
   {
@@ -343,17 +345,18 @@
    "outputs": [],
    "source": [
     "# Create all \"down\" array\n",
-    "logistic.pred=rep(\"Down\", 1250)\n",
+    "logistic.pred <- rep(\"Down\", 1250)\n",
     "\n",
     "# Set threshold 0.5\n",
-    "logistic.pred[logistic.probs>0.5]=\"Up\" "
+    "logistic.pred[logistic.probs > 0.5] <- \"Up\"\n",
+    "\"Up\"\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Confusion matrix and prediction accuracy"
+    "### Confusion matrix and prediction accuracy\n"
    ]
   },
   {
@@ -397,22 +400,23 @@
     }
    ],
    "source": [
-    "table(logistic.pred,Direction)\n",
-    "mean(logistic.pred==Direction)"
+    "table(logistic.pred, Direction)\n",
+    "mean(logistic.pred == Direction)\n",
+    "n)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cross Validation"
+    "### Cross Validation\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 1: Split data (2001~2004 for training, 2005 for test)"
+    "#### Step 1: Split data (2001~2004 for training, 2005 for test)\n"
    ]
   },
   {
@@ -425,16 +429,17 @@
    },
    "outputs": [],
    "source": [
-    "train=(Year<2005)\n",
-    "Smarket.2005=Smarket[!train,] \n",
-    "Direction.2005=Direction[!train]"
+    "train <- (Year < 2005)\n",
+    "Smarket.2005 <- Smarket[!train, ]\n",
+    "Direction.2005 <- Direction[!train]\n",
+    "in]\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 2: Train model on training data"
+    "#### Step 2: Train model on training data\n"
    ]
   },
   {
@@ -447,14 +452,15 @@
    },
    "outputs": [],
    "source": [
-    "logistic.fit=glm(Direction~Lag1+Lag2+Lag3+Lag4+Lag5+Volume, data=Smarket, family=binomial, subset=train)"
+    "logistic.fit <- glm(Direction ~ Lag1 + Lag2 + Lag3 + Lag4 + Lag5 + Volume, data = Smarket, family = binomial, subset = train)\n",
+    "mial, subset = train)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### tep 3: Make Prediction on test data"
+    "#### tep 3: Make Prediction on test data\n"
    ]
   },
   {
@@ -467,18 +473,19 @@
    },
    "outputs": [],
    "source": [
-    "logistic.probs=predict(logistic.fit, Smarket.2005, type=\"response\")\n",
-    "logistic.pred=rep(\"Down\", 252)\n",
+    "logistic.probs <- predict(logistic.fit, Smarket.2005, type = \"response\")\n",
+    "logistic.pred <- rep(\"Down\", 252)\n",
     "\n",
     "# Length(Direction.2005)\n",
-    "logistic.pred[logistic.probs>0.5]=\"Up\""
+    "logistic.pred[logistic.probs > 0.5] <- \"Up\"\n",
+    " \"Up\"\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 4: Assess prediction accuracy "
+    "#### Step 4: Assess prediction accuracy\n"
    ]
   },
   {
@@ -522,29 +529,30 @@
     }
    ],
    "source": [
-    "table(logistic.pred, Direction.2005) \n",
-    "mean(logistic.pred==Direction.2005)"
+    "table(logistic.pred, Direction.2005)\n",
+    "mean(logistic.pred == Direction.2005)\n",
+    "5)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LDA and QDA"
+    "### LDA and QDA\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 1 - Obtain dataset and Split it"
+    "#### Step 1 - Obtain dataset and Split it\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 2 - Train model and predict"
+    "#### Step 2 - Train model and predict\n"
    ]
   },
   {
@@ -589,20 +597,21 @@
     }
    ],
    "source": [
-    "lda.fit=lda(Direction~Lag1+Lag2, data=Smarket, subset=train) \n",
-    "lda.pred = predict(lda.fit, Smarket.2005) \n",
-    "names(lda.pred) \n",
+    "lda.fit <- lda(Direction ~ Lag1 + Lag2, data = Smarket, subset = train)\n",
+    "lda.pred <- predict(lda.fit, Smarket.2005)\n",
+    "names(lda.pred)\n",
     "\n",
-    "# See what prediction contains \n",
-    "# lda.pred$class \n",
-    "# lda.pred$posterior"
+    "# See what prediction contains\n",
+    "# lda.pred$class\n",
+    "# lda.pred$posterior\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 3 - Calculate prediction accuracy"
+    "#### Step 3 - Calculate prediction accuracy\n"
    ]
   },
   {
@@ -646,16 +655,17 @@
     }
    ],
    "source": [
-    "lda.class = lda.pred$class \n",
-    "table(lda.class, Direction.2005) \n",
-    "mean(lda.class==Direction.2005)"
+    "lda.class <- lda.pred$class\n",
+    "table(lda.class, Direction.2005)\n",
+    "mean(lda.class == Direction.2005)\n",
+    "5)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 4 - Change threshold (Extra)"
+    "#### Step 4 - Change threshold (Extra)\n"
    ]
   },
   {
@@ -699,17 +709,18 @@
     }
    ],
    "source": [
-    "lda.class = rep(\"Down\", length(Direction.2005))\n",
-    "lda.class[lda.pred$posterior[,2]>0.49] = \"Up\"\n",
-    "table(lda.class, Direction.2005) \n",
-    "mean(lda.class==Direction.2005)"
+    "lda.class <- rep(\"Down\", length(Direction.2005))\n",
+    "lda.class[lda.pred$posterior[, 2] > 0.49] <- \"Up\"\n",
+    "table(lda.class, Direction.2005)\n",
+    "mean(lda.class == Direction.2005)\n",
+    "5)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ROC curve of Logistic Regression"
+    "### ROC curve of Logistic Regression\n"
    ]
   },
   {
@@ -778,38 +789,39 @@
     }
    ],
    "source": [
-    "# fit logistic regression to all data (2001~2005) \n",
-    "LR.fit = glm(Direction~Lag1+Lag2+Lag3, family=binomial, data=Smarket) \n",
-    "# predict probability of \"UP\" \n",
-    "LR.pred = predict(LR.fit, type=\"response\")\n",
+    "# fit logistic regression to all data (2001~2005)\n",
+    "LR.fit <- glm(Direction ~ Lag1 + Lag2 + Lag3, family = binomial, data = Smarket)\n",
+    "# predict probability of \"UP\"\n",
+    "LR.pred <- predict(LR.fit, type = \"response\")\n",
     "\n",
     "# Calculate FPR and TPR under a given threshold\n",
-    "roc.curve=function(s, print=FALSE){ \n",
-    "    Ps=(LR.pred>s)*1 \n",
-    "    FP=sum((Ps==1)*(Direction==\"Down\"))/sum(Direction==\"Down\")\n",
-    "    TP=sum((Ps==1)*(Direction==\"Up\"))/sum(Direction==\"Up\") \n",
-    "    if(print==TRUE){ \n",
-    "        print(table(Observed=Direction, Predicted=Ps))\n",
-    "    } \n",
-    "    vect=c(FP, TP) \n",
-    "    names(vect)=c(\"FPR\", \"TPR\") \n",
-    "    return(vect) \n",
-    "} \n",
+    "roc.curve <- function(s, print = FALSE) {\n",
+    "    Ps <- (LR.pred > s) * 1\n",
+    "    FP <- sum((Ps == 1) * (Direction == \"Down\")) / sum(Direction == \"Down\")\n",
+    "    TP <- sum((Ps == 1) * (Direction == \"Up\")) / sum(Direction == \"Up\")\n",
+    "    if (print == TRUE) {\n",
+    "        print(table(Observed = Direction, Predicted = Ps))\n",
+    "    }\n",
+    "    vect <- c(FP, TP)\n",
+    "    names(vect) <- c(\"FPR\", \"TPR\")\n",
+    "    return(vect)\n",
+    "}\n",
     "\n",
-    "threshold=0.5 \n",
-    "roc.curve(threshold,print=TRUE) \n",
+    "threshold <- 0.5\n",
+    "roc.curve(threshold, print = TRUE)\n",
     "\n",
-    "# Plot ROC curve \n",
-    "ROC.curve=Vectorize(roc.curve) \n",
-    "M.ROC=ROC.curve(seq(0,1,by=0.01))\n",
-    "plot(M.ROC[1,], M.ROC[2,], col=\"grey\", lwd=2,type=\"l\", xlab=\"False positive rate\", ylab=\"True positive rate\")"
+    "# Plot ROC curve\n",
+    "ROC.curve <- Vectorize(roc.curve)\n",
+    "M.ROC <- ROC.curve(seq(0, 1, by = 0.01))\n",
+    "plot(M.ROC[1, ], M.ROC[2, ], col = \"grey\", lwd = 2, type = \"l\", xlab = \"False positive rate\", ylab = \"True positive rate\")\n",
+    "sitive rate\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ROC curve of LDA"
+    "### ROC curve of LDA\n"
    ]
   },
   {
@@ -878,38 +890,39 @@
     }
    ],
    "source": [
-    "LDA.fit = lda(Direction~Lag1+Lag2+Lag3, data=Smarket) \n",
-    "# Predict probabilities of training data \n",
-    "LDA.pred0 = predict(LDA.fit,type=\"response\") \n",
-    "LDA.pred = LDA.pred0$posterior[,2]\n",
+    "LDA.fit <- lda(Direction ~ Lag1 + Lag2 + Lag3, data = Smarket)\n",
+    "# Predict probabilities of training data\n",
+    "LDA.pred0 <- predict(LDA.fit, type = \"response\")\n",
+    "LDA.pred <- LDA.pred0$posterior[, 2]\n",
     "\n",
     "# Calculate FPR and TPR under a given threshold\n",
-    "roc.curve=function(s, print=FALSE){ \n",
-    "    Ps=(LDA.pred>s)*1 \n",
-    "    FP=sum((Ps==1)*(Direction==\"Down\"))/sum(Direction==\"Down\")\n",
-    "    TP=sum((Ps==1)*(Direction==\"Up\"))/sum(Direction==\"Up\") \n",
-    "    if(print==TRUE){ \n",
-    "        print(table(Observed=Direction, Predicted=Ps)) \n",
-    "    } \n",
-    "    vect=c(FP, TP) \n",
-    "    names(vect)=c(\"FPR\", \"TPR\") \n",
-    "    return(vect) \n",
-    "} \n",
+    "roc.curve <- function(s, print = FALSE) {\n",
+    "    Ps <- (LDA.pred > s) * 1\n",
+    "    FP <- sum((Ps == 1) * (Direction == \"Down\")) / sum(Direction == \"Down\")\n",
+    "    TP <- sum((Ps == 1) * (Direction == \"Up\")) / sum(Direction == \"Up\")\n",
+    "    if (print == TRUE) {\n",
+    "        print(table(Observed = Direction, Predicted = Ps))\n",
+    "    }\n",
+    "    vect <- c(FP, TP)\n",
+    "    names(vect) <- c(\"FPR\", \"TPR\")\n",
+    "    return(vect)\n",
+    "}\n",
     "\n",
-    "threshold=0.5 \n",
-    "roc.curve(threshold,print=TRUE) \n",
+    "threshold <- 0.5\n",
+    "roc.curve(threshold, print = TRUE)\n",
     "\n",
-    "# Plot ROC Curve \n",
-    "ROC.curve=Vectorize(roc.curve) \n",
-    "M.ROC=ROC.curve(seq(0,1,by=0.01))\n",
-    "plot(M.ROC[1,], M.ROC[2,], col=\"blue\", lwd=2,type=\"l\", xlab=\"False positive rate\", ylab=\"True positive rate\")"
+    "# Plot ROC Curve\n",
+    "ROC.curve <- Vectorize(roc.curve)\n",
+    "M.ROC <- ROC.curve(seq(0, 1, by = 0.01))\n",
+    "plot(M.ROC[1, ], M.ROC[2, ], col = \"blue\", lwd = 2, type = \"l\", xlab = \"False positive rate\", ylab = \"True positive rate\")\n",
+    "sitive rate\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### KNN"
+    "### KNN\n"
    ]
   },
   {
@@ -1013,31 +1026,32 @@
     }
    ],
    "source": [
-    "train=(Year<2005) \n",
+    "train <- (Year < 2005)\n",
     "\n",
     "# Training data of observation\n",
-    "train.X=cbind(Lag1, Lag2)[train,]\n",
+    "train.X <- cbind(Lag1, Lag2)[train, ]\n",
     "\n",
-    "# Test data of observation \n",
-    "test.X=cbind(Lag1, Lag2)[!train,]\n",
+    "# Test data of observation\n",
+    "test.X <- cbind(Lag1, Lag2)[!train, ]\n",
     "\n",
     "# Training data of response\n",
-    "train.Direction=Direction[train]\n",
+    "train.Direction <- Direction[train]\n",
     "\n",
-    "# Predict accuracy \n",
-    "knn.pred1=knn(train.X, test.X, train.Direction, k=1) \n",
-    "table(knn.pred1, Direction.2005) \n",
-    "mean(knn.pred1==Direction.2005) \n",
+    "# Predict accuracy\n",
+    "knn.pred1 <- knn(train.X, test.X, train.Direction, k = 1)\n",
+    "table(knn.pred1, Direction.2005)\n",
+    "mean(knn.pred1 == Direction.2005)\n",
     "\n",
     "# Change k to 3\n",
-    "knn.pred2=knn(train.X, test.X, train.Direction, k=3) \n",
-    "table(knn.pred2, Direction.2005) \n",
-    "mean(knn.pred2==Direction.2005)\n",
+    "knn.pred2 <- knn(train.X, test.X, train.Direction, k = 3)\n",
+    "table(knn.pred2, Direction.2005)\n",
+    "mean(knn.pred2 == Direction.2005)\n",
     "\n",
     "# Change k to 5\n",
-    "knn.pred2=knn(train.X, test.X, train.Direction, k=5) \n",
-    "table(knn.pred2, Direction.2005) \n",
-    "mean(knn.pred2==Direction.2005)"
+    "knn.pred2 <- knn(train.X, test.X, train.Direction, k = 5)\n",
+    "table(knn.pred2, Direction.2005)\n",
+    "mean(knn.pred2 == Direction.2005)\n",
+    "5)\n"
    ]
   }
  ],
