--- a/lab/lab3.ipynb
+++ b/lab/lab3.ipynb
@@ -323,8 +323,7 @@
     }
    ],
    "source": [
-    "contrasts(Direction)\n",
-    "\n"
+    "contrasts(Direction)\n"
    ]
   },
   {
@@ -348,8 +347,7 @@
     "logistic.pred <- rep(\"Down\", 1250)\n",
     "\n",
     "# Set threshold 0.5\n",
-    "logistic.pred[logistic.probs > 0.5] <- \"Up\"\n",
-    "\"Up\"\n"
+    "logistic.pred[logistic.probs > 0.5] <- \"Up\"\n"
    ]
   },
   {
@@ -401,8 +399,7 @@
    ],
    "source": [
     "table(logistic.pred, Direction)\n",
-    "mean(logistic.pred == Direction)\n",
-    "n)\n"
+    "mean(logistic.pred == Direction)\n"
    ]
   },
   {
@@ -431,8 +428,7 @@
    "source": [
     "train <- (Year < 2005)\n",
     "Smarket.2005 <- Smarket[!train, ]\n",
-    "Direction.2005 <- Direction[!train]\n",
-    "in]\n"
+    "Direction.2005 <- Direction[!train]\n"
    ]
   },
   {
@@ -452,8 +448,7 @@
    },
    "outputs": [],
    "source": [
-    "logistic.fit <- glm(Direction ~ Lag1 + Lag2 + Lag3 + Lag4 + Lag5 + Volume, data = Smarket, family = binomial, subset = train)\n",
-    "mial, subset = train)\n"
+    "logistic.fit <- glm(Direction ~ Lag1 + Lag2 + Lag3 + Lag4 + Lag5 + Volume, data = Smarket, family = binomial, subset = train)\n"
    ]
   },
   {
@@ -477,8 +472,7 @@
     "logistic.pred <- rep(\"Down\", 252)\n",
     "\n",
     "# Length(Direction.2005)\n",
-    "logistic.pred[logistic.probs > 0.5] <- \"Up\"\n",
-    " \"Up\"\n"
+    "logistic.pred[logistic.probs > 0.5] <- \"Up\"\n"
    ]
   },
   {
@@ -530,8 +524,7 @@
    ],
    "source": [
     "table(logistic.pred, Direction.2005)\n",
-    "mean(logistic.pred == Direction.2005)\n",
-    "5)\n"
+    "mean(logistic.pred == Direction.2005)\n"
    ]
   },
   {
@@ -603,8 +596,7 @@
     "\n",
     "# See what prediction contains\n",
     "# lda.pred$class\n",
-    "# lda.pred$posterior\n",
-    "\n"
+    "# lda.pred$posterior\n"
    ]
   },
   {
@@ -657,8 +649,7 @@
    "source": [
     "lda.class <- lda.pred$class\n",
     "table(lda.class, Direction.2005)\n",
-    "mean(lda.class == Direction.2005)\n",
-    "5)\n"
+    "mean(lda.class == Direction.2005)\n"
    ]
   },
   {
@@ -712,8 +703,7 @@
     "lda.class <- rep(\"Down\", length(Direction.2005))\n",
     "lda.class[lda.pred$posterior[, 2] > 0.49] <- \"Up\"\n",
     "table(lda.class, Direction.2005)\n",
-    "mean(lda.class == Direction.2005)\n",
-    "5)\n"
+    "mean(lda.class == Direction.2005)\n"
    ]
   },
   {
@@ -813,8 +803,7 @@
     "# Plot ROC curve\n",
     "ROC.curve <- Vectorize(roc.curve)\n",
     "M.ROC <- ROC.curve(seq(0, 1, by = 0.01))\n",
-    "plot(M.ROC[1, ], M.ROC[2, ], col = \"grey\", lwd = 2, type = \"l\", xlab = \"False positive rate\", ylab = \"True positive rate\")\n",
-    "sitive rate\")\n"
+    "plot(M.ROC[1, ], M.ROC[2, ], col = \"grey\", lwd = 2, type = \"l\", xlab = \"False positive rate\", ylab = \"True positive rate\")\n"
    ]
   },
   {
@@ -914,8 +903,7 @@
     "# Plot ROC Curve\n",
     "ROC.curve <- Vectorize(roc.curve)\n",
     "M.ROC <- ROC.curve(seq(0, 1, by = 0.01))\n",
-    "plot(M.ROC[1, ], M.ROC[2, ], col = \"blue\", lwd = 2, type = \"l\", xlab = \"False positive rate\", ylab = \"True positive rate\")\n",
-    "sitive rate\")\n"
+    "plot(M.ROC[1, ], M.ROC[2, ], col = \"blue\", lwd = 2, type = \"l\", xlab = \"False positive rate\", ylab = \"True positive rate\")\n"
    ]
   },
   {
@@ -1050,8 +1038,7 @@
     "# Change k to 5\n",
     "knn.pred2 <- knn(train.X, test.X, train.Direction, k = 5)\n",
     "table(knn.pred2, Direction.2005)\n",
-    "mean(knn.pred2 == Direction.2005)\n",
-    "5)\n"
+    "mean(knn.pred2 == Direction.2005)\n"
    ]
   }
  ],
